--- a/Test1/SpecRunner.html
+++ b/Test1/SpecRunner.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <title>Jasmine Test 1</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.4.1/jasmine_favicon.png">
-  <link rel="stylesheet" href="lib/jasmine-2.4.1/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="jasmine/images/jasmine_favicon.png">
+  <link rel="stylesheet" href="lib/jasmine-core/jasmine.css">
 
-  <script src="lib/jasmine-2.4.1/jasmine.js"></script>
-  <script src="lib/jasmine-2.4.1/jasmine-html.js"></script>
-  <script src="lib/jasmine-2.4.1/boot.js"></script>
+  <script src="lib/jasmine-core/jasmine.js"></script>
+  <script src="lib/jasmine-core/jasmine-html.js"></script>
+  <script src="lib/jasmine-core/boot.js"></script>
   <script src="questions.js" type="text/javascript"></script>
   <script src="questions.spec.js" type="text/javascript"></script>
 
