--- a/Test1/SpecRunner.html
+++ b/Test1/SpecRunner.html
@@ -9,7 +9,7 @@
 
   <script src="lib/jasmine-core/jasmine.js"></script>
   <script src="lib/jasmine-core/jasmine-html.js"></script>
-  <script src="lib/jasmine-core/boot.js"></script>
+  <script src="lib/jasmine-core/boot/boot.js"></script>
   <script src="questions.js" type="text/javascript"></script>
   <script src="questions.spec.js" type="text/javascript"></script>
 
