--- a/Test1/SpecRunner.html
+++ b/Test1/SpecRunner.html
@@ -5,11 +5,11 @@
   <title>Jasmine Test 1</title>
 
   <link rel="shortcut icon" type="image/png" href="jasmine/images/jasmine_favicon.png">
-  <link rel="stylesheet" href="Test1\jasmine\lib\jasmine-core\jasmine.css">
+  <link rel="stylesheet" href="jasmine/lib/jasmine-core/jasmine.css">
 
-  <script src="lib/jasmine-core/jasmine.js"></script>
-  <script src="lib/jasmine-core/jasmine-html.js"></script>
-  <script src="lib\jasmine-core\boot.js"></script>
+  <script src="jasmine/lib/jasmine-core.js"></script>
+  <script src="jasmine/lib/jasmine-core/jasmine-html.js"></script>
+  <script src="jasmine/lib/jasmine-core/boot.js"></script>
   <script src="questions.js" type="text/javascript"></script>
   <script src="questions.spec.js" type="text/javascript"></script>
 
