--- a/Recall/SpecRunner.html
+++ b/Recall/SpecRunner.html
@@ -15,6 +15,8 @@
     <!-- include source files here... -->
     <script type="text/javascript" src="questions.js"></script>
 
+    <p id="test">hi</p>
+
     <!-- include spec files here... -->
     <script type="text/javascript" src="questions.spec.js"></script>
 
